# pizzeria-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  robots.txt
.github/workflows/: ci.yml
dev/: estructura.md
scripts/: transform_structure.py  update_structure.py
src/: actualizar_iu.cpp  actualizar_iu.h  aplicador.cpp  aplicador.h  botones.cpp  botones.h  cadenas.cpp  cadenas.h  comandos.h  comparable.h  componentes.cpp  componentes.h  control_pizzas.cpp  control_pizzas.h  controlador_clicks.cpp  controlador_clicks.h  datos_nivel.h  datos_niveles.cpp  datos_niveles.h  debug.cpp  debug.h  debug_sfml.cpp  debug_sfml.h  dominio.cpp  dominio.h  estado_nivel.cpp  estado_nivel.h  fase_nivel.h  general.h  globales.cpp  globales.h  grid.cpp  grid.h  juego.cpp  juego.h  juego_assert.h  log_init.cpp  log_init.h  main.cpp  manejo_rutas.h  (+26 more)
src/_pruebas/: class_a.h  main.cpp
src/demos/: boost_log.cpp  boost_log.h  demo_nivel.cpp  demo_nivel.h  map.cpp  map.h  min_ex.h  prueba.cpp  prueba.h  unicode.cpp  unicode.h  visual.cpp  visual.h  visual_textos.cpp  visual_textos.h
src/enlace_vista/: enlace_vista.cpp  enlace_vista.h  presentador.cpp  presentador.h  presentador_paneles.cpp  presentador_paneles.h
src/modelo/: control_pizzas.cpp  control_pizzas.h  datos_modelo_interno.h  datos_nivel.h  datos_nivel_para_modelo.h  dominio.cpp  dominio.h  encargos.cpp  encargos.h  estado_modelo.cpp  estado_modelo.h  modelo.cpp  modelo.h  modelo_info.h  modelo_interno.cpp  modelo_interno.h  modelo_shared.h
src/modelo_amplio/: aplicador.cpp  aplicador.h  comandos.h  modelo_amplio.cpp  modelo_amplio.h  realizador.cpp  realizador.h  realizador_base.h
src/pruebas/: demo_map.cpp  demo_map.h
src/shared/: dev.h  font.cpp  font.h  num_nivel.cpp  num_nivel.h  types.h
src/templates/: dibujar_elementos.h  helpers.h
src/tests/: test_1.cpp  test_cadenas.cpp  test_componente.cpp  test_encargadas.cpp  test_evaluar_preparacion.cpp  test_main.cpp  test_num_nivel.cpp  test_presentador.cpp  test_tiempo.cpp  test_timer.cpp  test_usecases.cpp  test_vista.cpp
src/tests/modelo/: test_encargadas.cpp  test_evaluar_preparacion.cpp  test_modelo_amplio.cpp
src/tests/presentador/: test_activacion_botones.cpp  test_enlace_vista.cpp  test_presentador.cpp
src/tests/vistas/: test_vista_pedido.cpp
src/vista/: barras_progreso.cpp  barras_progreso.h  basicos_vista.cpp  basicos_vista.h  botones.cpp  botones.h  botones_app.cpp  botones_app.h  botones_despachar.cpp  botones_despachar.h  botones_encargar.cpp  botones_encargar.h  cadenas.cpp  cadenas.h  componente.cpp  componente.h  componentes.cpp  componentes.h  datos_botones.h  enlace_vista.cpp  enlace_vista.h  etiquetas.cpp  etiquetas.h  etiquetas_contadores.cpp  etiquetas_contadores.h  fabrica_etiquetas.cpp  fabrica_etiquetas.h  fabrica_etiquetas_contadores.cpp  fabrica_etiquetas_contadores.h  grid.cpp  grid.h  paneles.cpp  paneles.h  paneles_observables.h  posiciones.h  presentacion_vista.h  presentaciones.h  presentador.cpp  presentador.h  tarjetas_pedidos.cpp  (+8 more)
src/vista/botones/: botones_app.cpp  botones_app.h  botones_despachar.cpp  botones_despachar.h  botones_encargar.cpp  botones_encargar.h  botones_generales.cpp  botones_generales.h
src/vista/componentes/: barra_progreso.cpp  barra_progreso.h  boton_con_texto.cpp  boton_con_texto.h  boton_data.h  botones.cpp  botones.h  componente.cpp  componente.h  componente_old_style.h  crear_etiqueta.cpp  crear_etiqueta.h  etiqueta.cpp  etiqueta.h  fabrica_botones.cpp  fabrica_botones.h  varios.cpp  varios.h
src/vista/etiquetas/: etiquetas.cpp  etiquetas.h  etiquetas_barra_estado.cpp  etiquetas_barra_estado.h  etiquetas_contadores.cpp  etiquetas_contadores.h  etiquetas_info.cpp  etiquetas_info.h  etiquetas_pedidos.cpp  etiquetas_pedidos.h  etiquetas_preparadas.cpp  etiquetas_preparadas.h  fabrica_etiquetas.cpp  fabrica_etiquetas.h  fabrica_etiquetas_contadores.cpp  fabrica_etiquetas_contadores.h  fabrica_etiquetas_preparadas.cpp  fabrica_etiquetas_preparadas.h  visibilidad_etiquetas_info.h
